--- a/js1-week-2/2.md
+++ b/js1-week-2/2.md
@@ -13,4 +13,8 @@ Write your prediction below:
 
 Once you've written your prediction, then commit your work. Now actually run `2.js` using node and write your answer below:
 
+I predict an infinite loop 
+
 {ACTUAL OBSERVED BEHAVIOUR}
+
+the while loop is start counting from 1 to 10 and it loged the count while also rpeating itself for the count number.
