--- a/js1-week-2/3.md
+++ b/js1-week-2/3.md
@@ -1,4 +1,4 @@
 Describe the difference between a commit and a push
 
-
+git commit saves locally to my machine while git push will upload the changes to the online version.
 {YOUR ANSWER HERE}
