--- a/js1-week-2/0.md
+++ b/js1-week-2/0.md
@@ -26,3 +26,8 @@ c) Try to summarise the main difference between `logSum` and `calculateSum`
 
 
 {YOUR ANSWERS HERE}
+a) The answer to result1 is 42. This is because calculateSum is a function that takes two arguments, a and b, and returns their sum. In this case, the function is called with a equal to 10 and b equal to 32, so the returned value is 10 + 32 = 42.
+
+b) The answer to result2 is evaluate to undefined. This is because logSum is a function that logs the sum of its two arguments to the console using console.log(), but it does not return a value. Therefore, when logSum(10, 32) is called, the function logs the sum 42 to the console but does not return anything, so result2 is undefined.
+
+c) logSum logs the sum of its two arguments to the console using console.log(), while calculateSum returns the sum of its two arguments as a value. 
