--- a/js1-week-2/1.md
+++ b/js1-week-2/1.md
@@ -6,5 +6,6 @@ Ctr + Shift + V (Windows/Linux) or CMD + Shift + V (Mac)
 In this task, you'll need to look at some code in `1.js` and, firstly, predict what it will do, **without executing it**.
 
 {YOUR PREDICTION HERE}
+Answer: The code will throw a TypeError because currentYear is assigned a value of 2023, which is a number, but then the code tries to call currentYear as if it were a function, which is not possible.
 
 Afterwards, you can execute the code in `1.js` to check your answer 📝
