--- a/js1-week-2/2.md
+++ b/js1-week-2/2.md
@@ -12,5 +12,5 @@ Write your prediction below:
 {YOUR PREDICTION HERE}
 
 Once you've written your prediction, then commit your work. Now actually run `2.js` using node and write your answer below:
-
+Answer : It is going to print from 1 to 9
 {ACTUAL OBSERVED BEHAVIOUR}
