--- a/js1-week-2/3.md
+++ b/js1-week-2/3.md
@@ -2,3 +2,5 @@ Describe the difference between a commit and a push
 
 
 {YOUR ANSWER HERE}
+
+commit is used to save changes to the local repository and push is used to upload changes from the local repository to the remote repository
