--- a/js1-week-2/4.md
+++ b/js1-week-2/4.md
@@ -1,6 +1,7 @@
 Q: What is the difference between a fork and cloned repository?
 
 A: {YOUR ANSWER HERE}
+A fork is a copy of a repository made on a remote Git hosting service, while a cloned repository is a copy of a repository made on your local machine.
 
 
 Remember to commit and push when you're finished!
