--- a/js1-week-2/5.md
+++ b/js1-week-2/5.md
@@ -6,6 +6,9 @@ expect(sum(10,32)).toBe(42);
 ```
 
 a) Describe, in your own words, what the above assertion checks.
+ 
+ Answer: The assertion checks whether calling the sum function with 10 and 32 returns 42. It uses the toBe matcher to check for an exact match.
+
 
 Now try the following:
 
