--- a/js1-week-2/0.md
+++ b/js1-week-2/0.md
@@ -26,3 +26,10 @@ c) Try to summarise the main difference between `logSum` and `calculateSum`
 
 
 {YOUR ANSWERS HERE}
+
+a) function calculateSum(a, b) has an output, however its saved in const result1, and we need to log it ,
+and it returns a+b, so when we pass those two arguments ( 10, 32), 
+
+b) function logSum(a, b)  has no output,
+and it just log a+b in console which is 42, so when we pass those two arguments ( 10, 32), the result2 = 42 
+
