--- a/js1-week-2/1.md
+++ b/js1-week-2/1.md
@@ -7,4 +7,10 @@ In this task, you'll need to look at some code in `1.js` and, firstly, predict w
 
 {YOUR PREDICTION HERE}
 
+we called an function whiout declaring it first, so runnig the function does nothing.
+
+
 Afterwards, you can execute the code in `1.js` to check your answer 📝
+// IMPORTANT: Please read 1.md first!
+// Remember to write your prediction first, before you run this file
+ 
