--- a/js1-week-2/2.md
+++ b/js1-week-2/2.md
@@ -11,6 +11,8 @@ Write your prediction below:
 
 {YOUR PREDICTION HERE}
 
+when when we run it then it starts logging into cosole * first and multiply it 10 times 
+
 Once you've written your prediction, then commit your work. Now actually run `2.js` using node and write your answer below:
 
 {ACTUAL OBSERVED BEHAVIOUR}
