--- a/js1-week-2/3.md
+++ b/js1-week-2/3.md
@@ -2,3 +2,15 @@ Describe the difference between a commit and a push
 
 
 {YOUR ANSWER HERE}
+
+In the context of version control systems like Git, a commit and a push are two different operations with distinct purposes.
+
+A commit is a snapshot of changes made to a codebase at a specific point in time. 
+
+ es to the remote repository, they are updating the shared codebase with their local changes.
+
+In summary, a commit is a local operation that records changes to a codebase, while a push is a remote operation that sends those local changes to a shared repository where they can be accessed and reviewed by other developers.
+
+
+
+ 
