--- a/js1-week-2/4.md
+++ b/js1-week-2/4.md
@@ -2,5 +2,9 @@ Q: What is the difference between a fork and cloned repository?
 
 A: {YOUR ANSWER HERE}
 
+A fork is a copy of a repository that is created in a user's own account on the hosting service (such as GitHub or Bitbucket) rather than the original repository owner's account.
+On the other hand, cloning a repository means creating a local copy of the entire codebase and its history from a remote repository. 
+In summary, while both a fork and a cloned repository involve creating a copy of a codebase, forking is used primarily to create a separate branch of development, while cloning is used to create a local copy of a codebase for working on and contributing changes.
+
 
 Remember to commit and push when you're finished!
