--- a/js1-week-2/0.md
+++ b/js1-week-2/0.md
@@ -9,10 +9,12 @@ Consider the code in this program below:
 function calculateSum(a, b) {
   return a + b;
 }
+//the function calculateSum sum two numbers.
 
 function logSum(a, b) {
   console.log(a + b);
 }
+//the function logSum prints the sum of two numbers.
 
 const result1 = calculateSum(10, 32);
 const result2 = logSum(10, 32);
@@ -26,3 +28,4 @@ c) Try to summarise the main difference between `logSum` and `calculateSum`
 
 
 {YOUR ANSWERS HERE}
+// in logSum function the console.log function declare inside but in calculatSum we need call the function with the value outside the function.
