answering the questions

--- a/js1-week-2/0.md
+++ b/js1-week-2/0.md
@@ -19,10 +19,14 @@ const result2 = logSum(10, 32);
 ```
 
 a) what will `result1` evaluate to? Explain your answer
+The value of result1 will be 42.
+because when it call the function it will return 42, which is the sum of 10 & 32
 
 b) What will `result2` evaluate to? Explain your answer
+it will print 42 in screen. However, the value of result2 won't change.
 
 c) Try to summarise the main difference between `logSum` and `calculateSum`
 
+logSum: this function will print the sum of a and b.
 
-{YOUR ANSWERS HERE}
+calculateSum: this funciton will return the result of a+b.
