--- a/js1-week-2/1.md
+++ b/js1-week-2/1.md
@@ -6,5 +6,7 @@ Ctr + Shift + V (Windows/Linux) or CMD + Shift + V (Mac)
 In this task, you'll need to look at some code in `1.js` and, firstly, predict what it will do, **without executing it**.
 
 {YOUR PREDICTION HERE}
+nothing will happen as currentYear was declared as variable and in line 5 it was called as a function.
 
 Afterwards, you can execute the code in `1.js` to check your answer 📝
+Uncaught TypeError TypeError: currentYear is not a function
