--- a/js1-week-2/3.md
+++ b/js1-week-2/3.md
@@ -1,4 +1,5 @@
 Describe the difference between a commit and a push
 
-
 {YOUR ANSWER HERE}
+commit will save the changes locally.
+Push will save it remotely.
