--- a/js1-week-2/4.md
+++ b/js1-week-2/4.md
@@ -1,6 +1,7 @@
 Q: What is the difference between a fork and cloned repository?
 
 A: {YOUR ANSWER HERE}
-
+Fork will save a copy of the repository in my Github.
+clone will connect the saved copy with my GitHub Desktop (locally).
 
 Remember to commit and push when you're finished!
