--- a/js1-week-2/0.md
+++ b/js1-week-2/0.md
@@ -24,5 +24,4 @@ b) What will `result2` evaluate to? Explain your answer
 
 c) Try to summarise the main difference between `logSum` and `calculateSum`
 
-
-{YOUR ANSWERS HERE}
+result1 and result2 will bouth evaluate to 42 but result in console could see only from logSum
