--- a/js1-week-2/3.md
+++ b/js1-week-2/3.md
@@ -1,4 +1,3 @@
 Describe the difference between a commit and a push
 
-
-{YOUR ANSWER HERE}
+git commit saves repository changes on local but not remote repository. Contrarily, Git push then updates your git commit changes and sends it to remote repository.
