--- a/js1-week-2/4.md
+++ b/js1-week-2/4.md
@@ -1,6 +1,4 @@
 Q: What is the difference between a fork and cloned repository?
 
-A: {YOUR ANSWER HERE}
-
-
+A fork creates a completely independent copy of Git repository. In contrast to a fork, a Git clone creates a linked copy that will continue to synchronize with the target repository
 Remember to commit and push when you're finished!
