--- a/js1-week-2/5.md
+++ b/js1-week-2/5.md
@@ -1,13 +1,16 @@
-
 You've started to see **assertions** in your coursework that look something like this:
 
 ```js
-expect(sum(10,32)).toBe(42);
+expect(sum(10, 32)).toBe(42);
 ```
 
 a) Describe, in your own words, what the above assertion checks.
-
+assertions expected sum of 10 and 42 to be 42
 Now try the following:
 
 b) Write an **assertion** that checks that a funciton `isMultipleOfTen` returns `true` when called with the input `80`
 You can check out the [Jest documentation here](https://jestjs.io/docs/expect#matchers) to help you with this task.
+
+```js
+expect(isMultipleOfTen(80)).toBe(true);
+```
