--- a/js1-week-2/2.md
+++ b/js1-week-2/2.md
@@ -3,14 +3,13 @@
 In this task, you'll need to look at some code and predict what it does, **before running the program**
 This task will help you to develop your code reading skills.
 
-
 Look at the code in `2.js`: read it carefully and discuss it with your pair.
 What do you think the output will look like?
 If some parts of the code are unfamiliar, then look them up on MDN.
 Write your prediction below:
 
-{YOUR PREDICTION HERE}
+it is simple while looop, in output we will see each time increased value by 1
 
 Once you've written your prediction, then commit your work. Now actually run `2.js` using node and write your answer below:
 
-{ACTUAL OBSERVED BEHAVIOUR}
+we could see that method repeat. takes "\*" as a string wich it repeat using while loop
