solve up till step 4.md

--- a/js1-week-2/0.md
+++ b/js1-week-2/0.md
@@ -1,28 +1,32 @@
 # Code comprehension
 
+<!--
 Remember to **preview a markdown file** on your computer you can do:
 Ctrl + Shift + V (Windows/Linux) or CMD + Shift + V (Mac)
 
 Consider the code in this program below:
 
-```js
+```js -->
+
 function calculateSum(a, b) {
-  return a + b;
+return a + b;
 }
 
 function logSum(a, b) {
-  console.log(a + b);
+console.log(a + b);
 }
 
 const result1 = calculateSum(10, 32);
 const result2 = logSum(10, 32);
-```
 
-a) what will `result1` evaluate to? Explain your answer
+a) what will `result1` evaluate to? Explain your answer?
 
 b) What will `result2` evaluate to? Explain your answer
 
 c) Try to summarise the main difference between `logSum` and `calculateSum`
 
-
 {YOUR ANSWERS HERE}
+a) it evaluates to 42 but when running the code it is not appearing in the output. we need to write console.log(result1); in order to appear.
+b) it will return undefined because the function does not have a return statement.
+c) calculateSum: returns the result without logging it to the console.
+longSum: logs the result to the console but does not return it.
