--- a/js1-week-2/1.md
+++ b/js1-week-2/1.md
@@ -6,5 +6,9 @@ Ctr + Shift + V (Windows/Linux) or CMD + Shift + V (Mac)
 In this task, you'll need to look at some code in `1.js` and, firstly, predict what it will do, **without executing it**.
 
 {YOUR PREDICTION HERE}
+prediction:
+it will result in either of these two options:
+
+- an error because we are calling a function that does not exist and is in itself a variable and we cannot call a variable.
 
 Afterwards, you can execute the code in `1.js` to check your answer 📝
