--- a/js1-week-2/2.md
+++ b/js1-week-2/2.md
@@ -3,14 +3,16 @@
 In this task, you'll need to look at some code and predict what it does, **before running the program**
 This task will help you to develop your code reading skills.
 
-
 Look at the code in `2.js`: read it carefully and discuss it with your pair.
 What do you think the output will look like?
 If some parts of the code are unfamiliar, then look them up on MDN.
 Write your prediction below:
 
 {YOUR PREDICTION HERE}
+the output print numbers from 1 to 9 horizontally.
 
 Once you've written your prediction, then commit your work. Now actually run `2.js` using node and write your answer below:
 
 {ACTUAL OBSERVED BEHAVIOUR}
+
+the output prints astrik 10 times vertically. starting from one astrik in the first line and adding one astrik each line up to line 10.
