--- a/js1-week-2/3.md
+++ b/js1-week-2/3.md
@@ -1,4 +1,4 @@
 Describe the difference between a commit and a push
 
-
 {YOUR ANSWER HERE}
+commit will save changes in your local repository while push pushes these changes to the remote repository
