--- a/js1-week-2/4.md
+++ b/js1-week-2/4.md
@@ -1,6 +1,6 @@
 Q: What is the difference between a fork and cloned repository?
 
 A: {YOUR ANSWER HERE}
-
+a fork is creating a copy of the repository remotely, clone is creating a copy of the repository in the local machine.
 
 Remember to commit and push when you're finished!
