--- a/js1-week-2/0.md
+++ b/js1-week-2/0.md
@@ -25,4 +25,11 @@ b) What will `result2` evaluate to? Explain your answer
 c) Try to summarise the main difference between `logSum` and `calculateSum`
 
 
-{YOUR ANSWERS HERE}
+The function  calculateSum takes two arguments and returns the value of those arguments added together (summed)
+
+a) the sum of the two parameters is stored in result1 evaluate to 42
+ 
+b) result2 will log out the sum but doesn't return a value - we're not sure what it will return
+undefined
+
+c) Summarise the main differences : 1 returns a sum, 2 writes to the console
