questions and reviews updates

--- a/questions-and-reviews/questions/3.md
+++ b/questions-and-reviews/questions/3.md
@@ -1,4 +1,4 @@
 Describe the difference between a commit and a push
 
 
-{YOUR ANSWER HERE}
+{Commit is save the code with commit message and keep it in your device with updates, Then push is once you are sure all the changes are perfect then you upload the changes to the cloud GitHub.}
