--- a/questions-and-reviews/questions/4.md
+++ b/questions-and-reviews/questions/4.md
@@ -1,6 +1,6 @@
 Q: What is the difference between a fork and cloned repository?
 
-A: {YOUR ANSWER HERE}
+A: {Fork is copying the project from another cloud repository tou your own cloud repository as GitHub. Cloned is copying the project form the cloud repository to your local machine.}
 
 
 Remember to commit and push when you're finished!
