--- a/questions-and-reviews/questions/5.md
+++ b/questions-and-reviews/questions/5.md
@@ -7,6 +7,9 @@ expect(sum(10,32)).toBe(42);
 
 a) Describe, in your own words, what the above assertion checks.
 
+There is a sum method with 2 parameters and adding to these nunmbers. 
+As expect it assert the sum is adding these parameters and the total of the parameters will be as in toBe method. 
+
 Now try the following:
 
 b) Write an **assertion** that checks that a function `isMultipleOfTen` returns `true` when called with the input `80`
