--- a/questions-and-reviews/questions/0.md
+++ b/questions-and-reviews/questions/0.md
@@ -24,5 +24,7 @@ b) What will `result2` evaluate to? Explain your answer
 
 c) Try to summarise the main difference between `logSum` and `calculateSum`
 
-
 {YOUR ANSWERS HERE}
+a 42
+b 42
+logSum will print but calculateSum won't print
