--- a/questions-and-reviews/questions/0.md
+++ b/questions-and-reviews/questions/0.md
@@ -19,8 +19,12 @@ const result2 = logSum(10, 32);
 ```
 
 a) what will `result1` evaluate to? Explain your answer
+  // the answer should be 42, It is because function calculateSum 10+32
+
+
 
 b) What will `result2` evaluate to? Explain your answer
+// the answer should be 10+32, It is because function logSum is 10+32
 
 c) Try to summarise the main difference between `logSum` and `calculateSum`
 
