--- a/questions-and-reviews/questions/0.md
+++ b/questions-and-reviews/questions/0.md
@@ -18,11 +18,11 @@ const result1 = calculateSum(10, 32);
 const result2 = logSum(10, 32);
 ```
 
-a) what will `result1` evaluate to? Explain your answer
+a) what will `result1` evaluate to? If I call function:  I have 42
 
-b) What will `result2` evaluate to? Explain your answer
+b) What will `result2` evaluate to? Explain your answer : I have 42
 
-c) Try to summarise the main difference between `logSum` and `calculateSum`
+c) Try to summarise the main difference between `logSum` and `calculateSum` They have same result however logSum() executes in the terminal
 
 
 {YOUR ANSWERS HERE}
