--- a/questions-and-reviews/questions/0.md
+++ b/questions-and-reviews/questions/0.md
@@ -23,6 +23,7 @@ a) what will `result1` evaluate to? Explain your answer
 b) What will `result2` evaluate to? Explain your answer
 
 c) Try to summarise the main difference between `logSum` and `calculateSum`
+//I think both of them have the same results(42). In the first function we are using of return but in the second we are using of console.log
 
 
-{YOUR ANSWERS HERE}
+/
