commit for qn 1 and 2

--- a/questions-and-reviews/questions/0.md
+++ b/questions-and-reviews/questions/0.md
@@ -13,16 +13,17 @@ function calculateSum(a, b) {
 function logSum(a, b) {
   console.log(a + b);
 }
-
 const result1 = calculateSum(10, 32);
 const result2 = logSum(10, 32);
 ```
 
 a) what will `result1` evaluate to? Explain your answer
+The function executes and its result will be stored on result1.
 
 b) What will `result2` evaluate to? Explain your answer
+it will store the printed value of log a+b in result2.
 
 c) Try to summarise the main difference between `logSum` and `calculateSum`
 
-
+since their is no return value in result2 we will get undefined. 
 {YOUR ANSWERS HERE}
