--- a/questions-and-reviews/questions/1.md
+++ b/questions-and-reviews/questions/1.md
@@ -6,5 +6,6 @@ Ctr + Shift + V (Windows/Linux) or CMD + Shift + V (Mac)
 In this task, you'll need to look at some code in `1.js` and, firstly, predict what it will do, **without executing it**.
 
 {YOUR PREDICTION HERE}
-
+it is undefined since we dont have any function
 Afterwards, you can execute the code in `1.js` to check your answer 📝
+Executed result : current year is not a function : type error
