--- a/questions-and-reviews/questions/2.md
+++ b/questions-and-reviews/questions/2.md
@@ -10,6 +10,7 @@ If some parts of the code are unfamiliar, then look them up on MDN.
 Write your prediction below:
 
 {YOUR PREDICTION HERE}
+it console log * , repeating it count times while count is less than 10 starting from 0, with increment 1.
 
 Once you've written your prediction, then commit your work. Now actually run `2.js` using node and write your answer below:
 
