fix questions 1.md

--- a/questions-and-reviews/questions/1.md
+++ b/questions-and-reviews/questions/1.md
@@ -8,3 +8,4 @@ In this task, you'll need to look at some code in `1.js` and, firstly, predict w
 {YOUR PREDICTION HERE}
 
 Afterwards, you can execute the code in `1.js` to check your answer 📝
+currentyear is not a function
