answer for question 3

--- a/questions-and-reviews/questions/3.md
+++ b/questions-and-reviews/questions/3.md
@@ -1,4 +1,3 @@
 Describe the difference between a commit and a push
-
-
+commit is saving your change locally while pushing it is uploading it to github.
 {YOUR ANSWER HERE}
