answer for question 4

--- a/questions-and-reviews/questions/4.md
+++ b/questions-and-reviews/questions/4.md
@@ -1,6 +1,6 @@
 Q: What is the difference between a fork and cloned repository?
 
 A: {YOUR ANSWER HERE}
-
+fork is copy of a repository from the owner to a new account but cloned repository is when we copy our repo on our local machine to work locally and finally make a change in our github.
 
 Remember to commit and push when you're finished!
