--- a/questions-and-reviews/questions/3.md
+++ b/questions-and-reviews/questions/3.md
@@ -2,3 +2,4 @@ Describe the difference between a commit and a push
 
 
 {YOUR ANSWER HERE}
+commit is accepting changes in a part of your code and when you want to share it with others you must push them on github.
