--- a/questions-and-reviews/questions/2.md
+++ b/questions-and-reviews/questions/2.md
@@ -1,8 +1,9 @@
 ## Predict -> Run -> Observe -> Explain
 
+It will print \* 10 times and ++ will increase value everytime it will print.
+
 In this task, you'll need to look at some code and predict what it does, **before running the program**
 This task will help you to develop your code reading skills.
-
 
 Look at the code in `2.js`: read it carefully and discuss it with your pair.
 What do you think the output will look like?
