--- a/questions-and-reviews/questions/4.md
+++ b/questions-and-reviews/questions/4.md
@@ -4,3 +4,4 @@ A: {YOUR ANSWER HERE}
 
 
 Remember to commit and push when you're finished!
+When you fork a project, it is copied to your GitHub account, but when you clone it, it is copied to your local computer.
