--- a/questions-and-reviews/questions/5.md
+++ b/questions-and-reviews/questions/5.md
@@ -6,8 +6,10 @@ expect(sum(10,32)).toBe(42);
 ```
 
 a) Describe, in your own words, what the above assertion checks.
+The assertion expect(sum(10,32)).toBe(42); the function sum returns 42 when given the inputs 10 and 32. If the function returns 42, the test passes; otherwise, it fails.
 
 Now try the following:
 
 b) Write an **assertion** that checks that a function `isMultipleOfTen` returns `true` when called with the input `80`
 You can check out the [Jest documentation here](https://jestjs.io/docs/expect#matchers) to help you with this task.
+expect(isMultipleOfTen(80)).toBe(true);
