--- a/questions-and-reviews/questions/3.md
+++ b/questions-and-reviews/questions/3.md
@@ -1,4 +1,4 @@
 Describe the difference between a commit and a push
 
-
 {YOUR ANSWER HERE}
+The different between commit and push is, in commit we can change or add code and need to leave msg to commit each time we commit in our local machine.In push we can see the changes in remote and able to see how many time we have commit also need remote repository.
