Answers questions about javascript functions

--- a/questions-and-reviews/questions/0.md
+++ b/questions-and-reviews/questions/0.md
@@ -20,9 +20,11 @@ const result2 = logSum(10, 32);
 
 a) what will `result1` evaluate to? Explain your answer
 
-b) What will `result2` evaluate to? Explain your answer
+b) What will `result2` evaluate to?
 
 c) Try to summarise the main difference between `logSum` and `calculateSum`
 
-
 {YOUR ANSWERS HERE}
+a) result 1 will evaluate to 42. The function calculates sum will return the sum of the two arguments
+b) it will return undefined because the function does not return anything but console.log the sum of the argument
+c) logSum will only log the answer where as calculateSum will return the sum that can be reusable
