--- a/questions-and-reviews/questions/2.md
+++ b/questions-and-reviews/questions/2.md
@@ -9,7 +9,7 @@ If some parts of the code are unfamiliar, then look them up on MDN.
 Write your prediction below:
 
 {YOUR PREDICTION HERE}
-it will log to the console a star for each count. the first will be blank until it gets to 9 stars
+it will log to the console a star for each count. it will start with one star until it gets to 10 stars
 
 Once you've written your prediction, then commit your work. Now actually run `2.js` using node and write your answer below:
 
