Elaborates on fork and clone differences

--- a/questions-and-reviews/questions/4.md
+++ b/questions-and-reviews/questions/4.md
@@ -2,5 +2,8 @@ Q: What is the difference between a fork and cloned repository?
 
 A: {YOUR ANSWER HERE}
 
-
 Remember to commit and push when you're finished!
+fork
+for collaboration as you create a service side copy of a repository on your account
+
+cloning is for local work, typically clone your fork to start contributing
