Adds explanation of commit vs push

--- a/questions-and-reviews/questions/3.md
+++ b/questions-and-reviews/questions/3.md
@@ -1,4 +1,6 @@
 Describe the difference between a commit and a push
 
-
 {YOUR ANSWER HERE}
+A commit in Git is a snapshot of your changes in a repository at a specific point in time
+
+A push in Git is the process of sending your committed changes from your local repository to a remote repository, such as GitHub
