--- a/questions-and-reviews/questions/2.md
+++ b/questions-and-reviews/questions/2.md
@@ -9,8 +9,14 @@ What do you think the output will look like?
 If some parts of the code are unfamiliar, then look them up on MDN.
 Write your prediction below:
 
-{YOUR PREDICTION HERE}
+Thought it would throw up error 
 
 Once you've written your prediction, then commit your work. Now actually run `2.js` using node and write your answer below:
 
-{ACTUAL OBSERVED BEHAVIOUR}
+Runs Perfectly so it the count keeps adding 1 until it gets to ten using the asterisk
+*
+**
+***
+****
+*****
+until  it get to ten 
