Answer 4 difference between fork and cloned repo

--- a/questions-and-reviews/questions/4.md
+++ b/questions-and-reviews/questions/4.md
@@ -1,6 +1,7 @@
 Q: What is the difference between a fork and cloned repository?
 
-A: {YOUR ANSWER HERE}
+A: a fork is adding the respository to your github 
+   and a cloned repository is so that you can work locally in your ide on you local PC
 
 
 Remember to commit and push when you're finished!
