we answered the questions

--- a/questions-and-reviews/questions/0.md
+++ b/questions-and-reviews/questions/0.md
@@ -19,10 +19,12 @@ const result2 = logSum(10, 32);
 ```
 
 a) what will `result1` evaluate to? Explain your answer
+-The calculateSum function takes two arguments (a and b), adds them together, and returns the result.
 
 b) What will `result2` evaluate to? Explain your answer
+-The logSum function adds a and b, then logs the result to the console using console.log(a + b).
 
 c) Try to summarise the main difference between `logSum` and `calculateSum`
+-calculateSum returns the result of a + b, allowing you to use that value elsewhere in your code.
 
-
-{YOUR ANSWERS HERE}
+-logSum prints the result to the console but does not return anything.
